- Fixed issue #10870: Return statement does not *immediately* return inside a {dynamic_block}.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+- Fixed issue #10870: Return statement does not *immediately* return inside a
+ {dynamic_block}.
+
 1.2beta1 - Monday 07 May 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
