--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.2beta2 - [RELEASEDATE]
+1.2beta2 - Thursday 31 May 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Fixed issue #10075: Invalid cache created when the Customblock or
