--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.2rc1 - [RELEASEDATE]
+1.2rc1 - Friday 22 June 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Documentation updates.
