--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+- Made the TemplateObject available in CustomBlocks. Thanks to Felix Weis for 
+  the patch.
+
 1.2 - Monday 02 July 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
