--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 - Fixed issue #11228: Cannot supply an absolute Win32-Path to $t->process().
 - Better error message when an external (use) variable is not given.
 - Made named parameters work with PHP 5.1.6.
+- Fixed issue #12289: String function str_last_index documented, but not
+  defined.
 
 
 1.2 - Monday 02 July 2007
