--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,9 @@
   the compiled templates and generated cache files, by using the 0777 mode for
   creating the directories in which the compiled templates are stored. This
   mode is still modified by the umask.
+- Implemented issue #9973: Added a translation compiler to convert a string in
+  the original language, to the translated one without substituting parameters.
+  This is to have translation support for the Template component.
 
 
 1.2 - Monday 02 July 2007
