- Released Template version 1.3alpha1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.3alpha1 - [RELEASEDATE]
+1.3alpha1 - Monday 03 March 2008
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Made the TemplateObject available in CustomBlocks. Thanks to Felix Weis for 
