--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1.3alpha2 - [RELEASEDATE]
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+- Implemented issue #12723: Make Template date functions support the DateTime
+  object.
+
+
 1.3alpha1 - Monday 03 March 2008
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
