--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.3alpha2 - [RELEASEDATE]
+1.3alpha2 - Monday 05 May 2008
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Implemented issue #12723: Make Template date functions support the DateTime
