--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.5.3 - Sunday 19 February 2023
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+- Fixed tests and finalise PHP 8.0-8.2 support.
+
+
 1.5.2 - Monday 13 February 2023
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
