--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.5.4 - Friday 04 October 2024
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+- PHP 8.4 compatibility.
+
+
 1.5.3 - Sunday 19 February 2023
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
